k8s/dev/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-s3
spec:
  ingressClassName: traefik
  rules:
    - host: s3.sk03.id.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
